tests/toylang/neg/001663_mutation.toylang
program a = { while a program sleep; } .
